# cmake-so

./: .gitignore  CMakeLists.txt  READMD.md  build.bat  build.sh
src/: android_log.h  main.cpp
